# Static-and-Dynamic-Collisions

./: CMakeLists.txt  imgui.ini
libs/imgui/: CMakeLists.txt
src/: App.cpp  App.hpp  AppBalls.cpp  AppInput.cpp  AppRender.cpp  Ball.cpp  Ball.hpp  main.cpp
